--- a/code/popup.html
+++ b/code/popup.html
@@ -3,11 +3,12 @@
   <head>
     <style>
       button {
-        height: 60px;
+        height: 70px;
         width: 600px;
         outline: none;
       }
     </style>
+  <link rel="stylesheet" type="text/css" href="search.css"> 
   </head>
   <body>
     <button id="changeColor"></button>
@@ -16,7 +17,7 @@
     <!-- <button onclick="myFunction()" class="dropbtn">Profile search</button> -->
     <div id="mysearch" class="search-content">
       <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()"> 
-      <button>Submmit</button>   
+      <button id="submit-button">Submit</button>   
     </div>
   </body>
 
