--- a/code/popup.html
+++ b/code/popup.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <button id="changeColor"></button>
+   <!-- <button id="changeColor"></button> -->
     <script src="popup.js"></script>
       <div class="search">
     <!-- <button onclick="myFunction()" class="dropbtn">Profile search</button> -->
