--- a/code/popup.html
+++ b/code/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <style>
       button {
         height: 30px;
@@ -11,5 +12,6 @@
   </head>
   <body>
     <button id="changeColor"></button>
+    <script src="apidata.js"></script>
   </body>
 </html>
