change gone come

--- a/code/popup.html
+++ b/code/popup.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-
     <style>
       button {
         height: 70px;
@@ -12,15 +11,15 @@
   <link rel="stylesheet" type="text/css" href="search.css"> 
   </head>
   <body>
-   <!-- <button id="changeColor"></button> -->
+    <button id="changeColor"></button>
     <script src="popup.js"></script>
-      <div class="search">
+      <div class="search background">
     <!-- <button onclick="myFunction()" class="dropbtn">Profile search</button> -->
     <div id="mysearch" class="search-content">
       <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()"> 
-      <button id="submit-button">Submit</button>   
+      <button id="submit-button">Submit 1</button>   
     </div>
   </body>
-
-
    </html>
+
+   
