Set up server and client data transfer

--- a/code/popup.html
+++ b/code/popup.html
@@ -20,6 +20,7 @@
       <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()"> 
       <button id="submit-button">Submit</button>   
     </div>
+    <script src="apidata.js"></script>
   </body>
 
 
