don't even try it

--- a/code/popup.html
+++ b/code/popup.html
@@ -11,14 +11,18 @@
   <link rel="stylesheet" type="text/css" href="search.css"> 
   </head>
   <body>
-    <button id="changeColor"></button>
+    <!-- <button id="changeColor"></button> -->
+
     <script src="popup.js"></script>
+
       <div class="search background">
-    <!-- <button onclick="myFunction()" class="dropbtn">Profile search</button> -->
-    <div id="mysearch" class="search-content">
+
+     <div id="mysearch" class="search-content">
       <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()"> 
       <button id="submit-button">Submit 1</button>   
-    </div>
+    </div> -->  
+
+
   </body>
    </html>
 
