--- a/code/popup.html
+++ b/code/popup.html
@@ -30,7 +30,20 @@
     </div>
   </div>
   <script src="popup.js"></script>
-  <script src="apidata.js"></script>
+  <script>function getUserName() {
+    var nameField = document.getElementById('nameField').value;
+    var result = document.getElementById('result');
+    if (nameField.length < 3) {
+      result.textContent = 'Username must contain at least 3 characters';
+    } else {
+      result.textContent = 'Your username is: ' + nameField;
+      let summName = nameField;
+      return summName;
+    }
+  }
+    var subButton = document.getElementById('subButton');
+    subButton.addEventListener('click', getUserName, false);
+  </script>
 </body>
 
 </html>
